# AgriReviewsSentimentalAnalysis

./: README.md  install_libraries  project1_2.py  project1_3(usable).py  project1_3_1.py  project1_3_2.py  pyproject.toml  requirements.txt
