[tool.poetry]
name = "agrireviewssentimentalanalysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langdetect = "^1.0.9"
nltk = "^3.9.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
selenium = "^4.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
